--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-release</artifactId>
+      <version>2.3.1</version>
+      <type>pom</type>
+    </dependency>
+
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-mongodb-panache</artifactId>
